fix(Slider): pseudo element may casue body overflow-x (#4699)

--- a/src/slider/index.less
+++ b/src/slider/index.less
@@ -23,16 +23,6 @@
       top: 50%;
       right: 0;
       transform: translate3d(50%, -50%, 0);
-
-      /* use pseudo element to expand touch area */
-      &::after {
-        position: absolute;
-        top: -50%;
-        left: -50%;
-        width: 200%;
-        height: 200%;
-        content: '';
-      }
     }
   }
 
